namespace ConsoleApp1.CPF
{
    interface IClient
    {
    }
}
