@startuml

package Models {

    interface IClient
    
    class Client {
        + ClientId : int <<get>> <<set>>
        + Name : string <<get>> <<set>>
        + Email : string <<get>> <<set>>
        + Cpf : string <<get>> <<set>>
        + DataRegister : DateTime <<get>> <<set>>
    }
}

package Repository {
    interface IRepository {
        + Add(T model) : string
    }
    
    class ClientRepository {
        + Add(T model) : string
    }
}

package Email {
    interface IEmailer {
        + sendEmail(string clientEmail) : string
    }
    
    class Emailer {
        + sendEmail(string clientEmail) : string
    }
}


class ClientUtils {
    + validateClient(Client client) : boolean
}

IClient <|-down- Client: Inheritance
IRepository <|-down- ClientRepository: Inheritance

@enduml
